appId: com.ekalight.app.staging
---
- launchApp
- assertVisible: "Portfolio"
- tapOn: "Scan"
- assertVisible: "Tap anywhere to scan"
